--- a/src/WebUI/ClientApplication/src/assets/demo.html
+++ b/src/WebUI/ClientApplication/src/assets/demo.html
@@ -18,6 +18,22 @@
 <title>user</title>
 <path d="M13.714 7.654l-0.001 0c0.182-0.519 0.286-1.073 0.286-1.654 0-2.761-2.238-5-5-5s-5 2.239-5 5c0 0.581 0.104 1.135 0.286 1.654v-0c-1.948 0.991-3.286 3.010-3.286 5.345v3c0 0.553 0.448 1.001 1.001 1.001h13.997c0.553 0 1.001-0.448 1.001-1.001v-3c0-2.336-1.337-4.354-3.286-5.345zM9 3c1.654 0 3 1.346 3 3s-1.346 3-3 3c-1.654 0-3-1.346-3-3s1.346-3 3-3zM15 15h-12v-2.001c0-1.604 0.952-2.987 2.318-3.624 0.914 0.997 2.223 1.625 3.682 1.625s2.768-0.628 3.682-1.625c1.366 0.636 2.318 2.020 2.318 3.624v2.001z"></path>
 </symbol>
+<symbol id="icon-cancel" viewBox="0 0 18 18">
+<title>cancel</title>
+<path d="M9 1c-4.418 0-8 3.582-8 8s3.582 8 8 8 8-3.582 8-8-3.582-8-8-8zM3 9c0-1.294 0.416-2.491 1.116-3.472l8.356 8.356c-0.981 0.7-2.178 1.116-3.472 1.116-3.309 0-6-2.691-6-6zM13.884 12.472l-8.356-8.356c0.981-0.7 2.178-1.116 3.472-1.116 3.309 0 6 2.691 6 6 0 1.294-0.416 2.491-1.116 3.472z"></path>
+</symbol>
+<symbol id="icon-checkmark" viewBox="0 0 20 20">
+<title>checkmark</title>
+<path d="M0 11l2-2 5 5 11-11 2 2-13 13z"></path>
+</symbol>
+<symbol id="icon-checkmark-outline" viewBox="0 0 20 20">
+<title>checkmark-outline</title>
+<path d="M2.93 17.070c-1.884-1.821-3.053-4.37-3.053-7.193 0-5.523 4.477-10 10-10 2.823 0 5.372 1.169 7.19 3.050l0.003 0.003c1.737 1.796 2.807 4.247 2.807 6.947 0 5.523-4.477 10-10 10-2.7 0-5.151-1.070-6.95-2.81l0.003 0.003zM15.66 15.66c1.449-1.449 2.344-3.45 2.344-5.66 0-4.421-3.584-8.004-8.004-8.004-2.21 0-4.211 0.896-5.66 2.344v0c-1.449 1.449-2.344 3.45-2.344 5.66 0 4.421 3.584 8.004 8.004 8.004 2.21 0 4.211-0.896 5.66-2.344v0zM6.7 9.29l2.3 2.31 4.3-4.3 1.4 1.42-5.7 5.68-3.7-3.7 1.4-1.42z"></path>
+</symbol>
+<symbol id="icon-close-outline" viewBox="0 0 20 20">
+<title>close-outline</title>
+<path d="M2.93 17.070c-1.884-1.821-3.053-4.37-3.053-7.193 0-5.523 4.477-10 10-10 2.823 0 5.372 1.169 7.19 3.050l0.003 0.003c1.737 1.796 2.807 4.247 2.807 6.947 0 5.523-4.477 10-10 10-2.7 0-5.151-1.070-6.95-2.81l0.003 0.003zM4.34 15.66c1.449 1.449 3.45 2.344 5.66 2.344 4.421 0 8.004-3.584 8.004-8.004 0-2.21-0.896-4.211-2.344-5.66v0c-1.449-1.449-3.45-2.344-5.66-2.344-4.421 0-8.004 3.584-8.004 8.004 0 2.21 0.896 4.211 2.344 5.66v0zM14.24 7.17l-2.83 2.83 2.83 2.83-1.41 1.41-2.83-2.83-2.83 2.83-1.41-1.41 2.83-2.83-2.83-2.83 1.41-1.41 2.83 2.83 2.83-2.83 1.41 1.41z"></path>
+</symbol>
 <symbol id="icon-key" viewBox="0 0 20 20">
 <title>key</title>
 <path d="M12.26 11.74l-2.26 2.26h-2v2h-2v2l-2 2h-4v-4l8.26-8.26c-0.164-0.521-0.258-1.12-0.258-1.742 0-3.314 2.686-6 6-6s6 2.686 6 6c0 3.314-2.686 6-6 6-0.621 0-1.221-0.094-1.784-0.27l0.043 0.011zM17.12 7.12c0.542-0.543 0.877-1.292 0.877-2.12 0-1.656-1.342-2.998-2.997-3h-0c-0.828 0.001-1.578 0.337-2.12 0.88l-0 0 4.24 4.24z"></path>
@@ -41,6 +57,14 @@
 <symbol id="icon-chat" viewBox="0 0 20 20">
 <title>chat</title>
 <path d="M5.8 12.2v-6.2h-3.8c-1.1 0-2 0.9-2 2v6c0 1.1 0.9 2 2 2h1v3l3-3h5c1.1 0 2-0.9 2-2v-1.82c-0.064 0.014-0.132 0.021-0.2 0.021l-7-0.001zM18 1h-9c-1.1 0-2 0.9-2 2v8h7l3 3v-3h1c1.1 0 2-0.899 2-2v-6c0-1.1-0.9-2-2-2z"></path>
+</symbol>
+<symbol id="icon-check" viewBox="0 0 20 20">
+<title>check</title>
+<path d="M8.294 16.998c-0.435 0-0.847-0.203-1.111-0.553l-3.573-4.721c-0.465-0.613-0.344-1.486 0.27-1.951 0.615-0.467 1.488-0.344 1.953 0.27l2.351 3.104 5.911-9.492c0.407-0.652 1.267-0.852 1.921-0.445s0.854 1.266 0.446 1.92l-6.984 11.21c-0.242 0.391-0.661 0.635-1.12 0.656-0.022 0.002-0.042 0.002-0.064 0.002z"></path>
+</symbol>
+<symbol id="icon-circle-with-cross" viewBox="0 0 20 20">
+<title>circle-with-cross</title>
+<path d="M10 1.6c-4.639 0-8.4 3.761-8.4 8.4s3.761 8.4 8.4 8.4 8.4-3.761 8.4-8.4c0-4.639-3.761-8.4-8.4-8.4zM14.789 13.061l-1.729 1.729-3.060-3.061-3.061 3.060-1.729-1.729 3.062-3.060-3.061-3.061 1.729-1.728 3.060 3.060 3.061-3.061 1.729 1.729-3.062 3.061 3.061 3.061z"></path>
 </symbol>
 <symbol id="icon-home" viewBox="0 0 20 20">
 <title>home</title>
@@ -94,9 +118,29 @@
                 <svg class="icon icon-user"><use xlink:href="#icon-user"></use></svg><span class="name"> icon-user</span>
             </div>
         </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-cancel"><use xlink:href="#icon-cancel"></use></svg><span class="name"> icon-cancel</span>
+            </div>
+        </div>
   </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-checkmark"><use xlink:href="#icon-checkmark"></use></svg><span class="name"> icon-checkmark</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-checkmark-outline"><use xlink:href="#icon-checkmark-outline"></use></svg><span class="name"> icon-checkmark-outline</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-close-outline"><use xlink:href="#icon-close-outline"></use></svg><span class="name"> icon-close-outline</span>
+            </div>
+        </div>
         <div class="glyph fs2">
             <div class="clearfix pbs">
                 <svg class="icon icon-key"><use xlink:href="#icon-key"></use></svg><span class="name"> icon-key</span>
@@ -125,6 +169,16 @@
         <div class="glyph fs2">
             <div class="clearfix pbs">
                 <svg class="icon icon-chat"><use xlink:href="#icon-chat"></use></svg><span class="name"> icon-chat</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-check"><use xlink:href="#icon-check"></use></svg><span class="name"> icon-check</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-circle-with-cross"><use xlink:href="#icon-circle-with-cross"></use></svg><span class="name"> icon-circle-with-cross</span>
             </div>
         </div>
         <div class="glyph fs2">
